Closed Bug 1101115 Opened 11 years ago Closed 10 years ago

###!!! ASSERTION: Content should not be calling this: 'Not Reached', file mozilla-central/chrome/nsChromeRegistryContent.cpp, line 216

Categories

(Core :: General, defect)

x86_64
Linux
defect
Not set
normal
Points:
2

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
e10s + ---
firefox43 --- fixed

People

(Reporter: dholbert, Assigned: enndeakin)

References

Details

(Keywords: assertion)

Attachments

(1 file, 1 obsolete file)

STR: 1. Visit a file:/// directory-listing URI (e.g. just file:/// itself), in a debug build, with e10s enabled (the default). ACTUAL RESULTS: ###!!! ASSERTION: Content should not be calling this: 'Not Reached', file mozilla-central/chrome/nsChromeRegistryContent.cpp, line 216
(Hit this on 64-bit linux, with a build from today (mozilla-central changeset 084441e904d1).)
Keywords: assertion
OS: All → Linux
Hardware: All → x86_64
Blocks: e10s
Attached patch filelistrtl (obsolete) — Splinter Review
In fact, the issue is that we can't retrieve the direction for file listings, so they always display in ltr.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attached patch Fix minor issuesSplinter Review
Attachment #8652887 - Attachment is obsolete: true
Attachment #8653619 - Flags: review?(benjamin)
Attachment #8653619 - Flags: review?(benjamin) → review+
url: https://hg.mozilla.org/integration/mozilla-inbound/rev/fba67babe664eeb189d2795e36e9edc2cae94f9d changeset: fba67babe664eeb189d2795e36e9edc2cae94f9d user: Neil Deakin <neil@mozilla.com> date: Fri Aug 28 03:13:06 2015 -0400 description: Bug 1101115, implement nsChromeRegistryContent::IsLocaleRTL so that file directory view works in e10s rtl mode, r=bsmedberg
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Points: --- → 2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: